
        [float]
        ===== Bug fixes

2. When making a release, change the "==== Unreleased" section header to:

        [[release-notes-x.x.x]]
        ==== x.x.x - YYYY/MM/DD
////

[[release-notes-3.x]]
=== Node.js Agent version 3.x

==== Unreleased

[float]
===== Breaking changes

[float]
===== Features

* Add support for node v18. ({pull}2652[#2652])

* Adds initial implementaion of
  https://github.com/elastic/apm/blob/main/specs/agents/handling-huge-traces/tracing-spans-compress.md[span compression]. To enable, set the `spanCompressionEnabled` configuration field to `true`.  ({issues}2100[#2100])

* Marks spans as "exit spans" across all instrumentations, preventing additional
  child spans from being added to the exit spans.  See issue for a full list of
  spans types that will be treated as exit spans. ({issues}2601[#2601])

* Allow a new span to be created/started even if its transaction has ended.
  This is expected to be a very rare use case. ({pull}2653[#2653])

[float]
===== Bug fixes

[[release-notes-3.31.0]]
==== 3.31.0 2022/03/23

[float]
===== Features

* Add `captureBody` support for Hapi. ({issues}1905[#1905])

* If a SNS or SQS single event trigger to an instrumented Lambda function
  includes message attributes with the name "traceparent" (and "tracestate"),
  case-insensitive, then those are used to continue the trace. This was already
  being done for API Gateway event headers.

[float]
===== Bug fixes

* Fix a bug with Lambda instrumentation where the APM agent would result in
  an otherwise working Lambda function to respond with `null` if the Lambda
  was missing the https://github.com/elastic/apm-aws-lambda[Elastic APM Lambda Extension].
  ({issues}2598[#2598])

* Fix a bug in Lambda instrumentation in the capturing of SNS and SQS event
  message attributes. ({issues}2605[#2605])


[[release-notes-3.30.0]]
==== 3.30.0 2022/03/10

[float]
===== Breaking changes
