@@ -70,7 +70,7 @@ var DEFAULTS = {
   sourceLinesErrorLibraryFrames: 5,
   sourceLinesSpanAppFrames: 0,
   sourceLinesSpanLibraryFrames: 0,
-  spanCompressionEnabled: false,
+  spanCompressionEnabled: true,
   spanCompressionExactMatchMaxDuration: '50ms',
   spanCompressionSameKindMaxDuration: '0ms',
   // 'spanStackTraceMinDuration' is explicitly *not* included in DEFAULTS
