@@ -219,11 +219,20 @@ module.exports = function (http2, agent, { enabled }) {
       agent.logger.debug('intercepted call to http2.request')
       var method = headers[':method'] || 'GET'
       const span = ins.createSpan(null, 'external', 'http', method, { exitSpan: true })
+
+      const parentRunContext = ins.currRunContext()
+      var parent = span || parentRunContext.currSpan() || parentRunContext.currTransaction()
+      if (parent) {
+        const newHeaders = Object.assign({}, headers)
+        parent.propagateTraceContextHeaders(newHeaders, function (carrier, name, value) {
+          carrier[name] = value
+        })
+        arguments[0] = newHeaders
+      }
       if (!span) {
         return orig.apply(this, arguments)
       }
 
-      const parentRunContext = ins.currRunContext()
       const spanRunContext = parentRunContext.enterSpan(span)
       var req = ins.withRunContext(spanRunContext, orig, this, ...arguments)
 
