@@ -5,7 +5,8 @@ const agent = require('../../../..').start({
   secretToken: 'test',
   captureExceptions: false,
   metricsInterval: 0,
-  centralConfig: false
+  centralConfig: false,
+  spanCompressionEnabled: false
 })
 
 const semver = require('semver')
